--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.1.5",
+    "autoprefixer": "^10.4.20",
     "next": "14.2.8",
+    "postcss": "^8.4.45",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.78.0",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@types/node": "^20",
